objects/SFDC_Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Requester_Department2__c</fullName>
        <description>List of primary departments requesting support. Please note that the values for this picklist should be the same on both the Change Request and Case Object (eTech Support Record Type ONLY). If you are modifying one, please update the other</description>
        <label>Requester Department</label>
        <picklist>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Mgmt - HE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Mgmt - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Mgmt - PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Mgmt - RI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Mgmt - TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Career Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting &amp; Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost &amp; Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crimson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Acquistion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery - Compass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery - Crimson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Technology (IS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events &amp; Member Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expert Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HC Performance Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HC  Technical Member Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Support and Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iRound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester_Department__c</fullName>
        <formula>Requested_By2__r.Employee_User_Record__r.Department &amp;&quot; - &quot; &amp;Requested_By2__r.Employee_User_Record__r.Division</formula>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Sub_Department__c</fullName>
        <description>List of sub-departments or individual divisions requesting support. Please note that the values for this picklist should be the same on both the Change Request and Case Object (eTech Support Record Type ONLY). If you are modifying one, please update the other</description>
        <label>Requester Sub-Department</label>
        <picklist>
            <controllingField>Requester_Department2__c</controllingField>
            <picklistValues>
                <fullName>Account Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Management &amp; Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audience Rx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMGA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clinovations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost &amp; Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost &amp; Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPRM &amp; CQR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crimson-ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Acquisition Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Integrity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Strategies &amp; Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB Performance Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education Advisory Board</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educational Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requirements_Completed__c</fullName>
        <inlineHelpText>Date All Requirements were documented received by IS.</inlineHelpText>
        <label>Requirements Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution_Date_Time__c</fullName>
        <label>Resolution Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Risk_Areas_Concerns__c</fullName>
        <inlineHelpText>Are there any risks associated with this project -- items that are not blocking progress yet, but may have a negative impact prior to completion.</inlineHelpText>
        <label>Risk Areas/Concerns</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SF_Instance__c</fullName>
        <description>CR-20120123-329 - This field has been created to distinguish between the various instances when creating a Change Request.  CR-1977 - field updated to be more generic</description>
        <label>SF Instance</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC-Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC-BI Support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOX_Certification_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person who signed off on the SOX certification for this project.</inlineHelpText>
        <label>SOX Certification Approver</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SFDC_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SOX_Certification_Completed__c</fullName>
        <inlineHelpText>Date SOX testing has completed and system has been certified for release to Production.</inlineHelpText>
        <label>SOX Certification Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOX_Certification_Required__c</fullName>
        <label>SOX Certification Required</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SOX_Object_Mods__c</fullName>
        <label>SOX Object Mods</label>
        <summaryFilterItems>
            <field>IS_System_Modification__c.SOX_Object__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>IS_System_Modification__c.Change_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sandbox_Primary__c</fullName>
        <description>This field displays the sandbox being used for initial development and testing on Level II releases.</description>
        <formula>Release__r.Sandbox_Primary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field displays the sandbox being used for initial development and testing on Level II releases.</inlineHelpText>
        <label>z1_Sandbox - Primary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheduled_Completion_Date__c</fullName>
        <inlineHelpText>Date project is scheduled to go-live in Production.</inlineHelpText>
        <label>Scheduled Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Scheduled_Date_Change_Reason__c</fullName>
        <inlineHelpText>Enter a reason for any Change to the Scheduled Completion Date.</inlineHelpText>
        <label>Scheduled Date Change Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sifter__c</fullName>
        <description>advisory.sifterapp.com ticket number</description>
        <inlineHelpText>Enter the reference number if this item is additionally being tracked in another system</inlineHelpText>
        <label>Reference Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution_Design_Work_Order__c</fullName>
        <label>Solution Design/Work Order</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Business Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Details Gathering-Business Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design/Estimate In Progress-Dev Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Info Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA Review Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev QA Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev QA In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev QA Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev QA Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Sandbox QA In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Sandbox QA Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test Sandbox QA Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Ready to Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Cross Check</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross Check Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stakeholder_Solution_Review__c</fullName>
        <inlineHelpText>Indicates the status of solution review by the stakeholder, if needed</inlineHelpText>
        <label>Stakeholder Solution Review</label>
        <picklist>
            <picklistValues>
                <fullName>Not Needed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <inlineHelpText>When did the outage first occur?</inlineHelpText>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Intake_Review__c</fullName>
        <description>CR-5406 Use cases, testing scenarios and expected outcomes outlined well. Compared with all other open CRs at this time. Vetted against other departments/Users/integrations and given consideration for system integrity and growth. Typically updated by the manager of the eTech Dev Business Operations team.</description>
        <label>Status - Intake Review</label>
        <picklist>
            <picklistValues>
                <fullName>Business Review in Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Business Review Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME Review In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME Review Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold - Stakeholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold - eTech</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Solution_Review__c</fullName>
        <description>Read/Write Controlled By Permission Set</description>
        <label>Status - Solution Review?</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - To Be Re-reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes - Final Approval Pending Q&amp;A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Tech_Review__c</fullName>
        <description>Created for CR-5406</description>
        <label>Status - Tech Review</label>
        <picklist>
            <picklistValues>
                <fullName>Not Ready</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready for Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Passed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>01-New Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>02-Sponsored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03-Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04-Estimated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05-Prioritized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06-In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07-In Dev QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08-To Test Sandbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09-In IS QA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-In UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-Ready for Deployment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12-Deployed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Info Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Outage - Works as Intended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Steps_To_Test_Expected_Results__c</fullName>
        <inlineHelpText>Detail the steps to test preparation, execution in SF or out and the expected outcome of the test  Please include suggested login as profiles/users, record types, as well as detailed Reports URLs or Report Types/filters for Reports that would support test</inlineHelpText>
        <label>Steps To Test/Expected Results</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Story_Size__c</fullName>
        <label>Story Size</label>
        <picklist>
            <picklistValues>
                <fullName>XS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XL</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Release_Date__c</fullName>
        <formula>Release__r.Target_Release_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Target Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Testing_Results_Dev__c</fullName>
        <description>For QA testing results tracking; Accessible with SFDC CR Testing Fields permission set</description>
        <inlineHelpText>For tracking of QA testing in Dev sandbox</inlineHelpText>
        <label>Testing Results - Dev</label>
        <picklist>
            <picklistValues>
                <fullName>Unable to test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass - Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass - After fail or change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing_Results_Notes__c</fullName>
        <inlineHelpText>For use by the QA Lead to track testing notes related to the CR</inlineHelpText>
        <label>QA Lead Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Testing_Results_QA__c</fullName>
        <inlineHelpText>Populated by QA Lead or QA/Release Managers/PM with access to edit via a Permission Set.</inlineHelpText>
        <label>zzzTesting Results - QA</label>
        <picklist>
            <picklistValues>
                <fullName>Dev QA Pass - Pure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev QA Pass - After Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev QA Fail - Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev QA Fail - WO Discrepancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev QA Fail - Conflicting CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dev QA Fail - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test SB QA Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test SB QA Pass - After Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test SB QA Fail – Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test SB QA Fail – WO Discrepancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test SB QA Fail – Conflicting CR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test SB QA Fail – Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Testing_Results_Staging__c</fullName>
        <description>For QA testing results tracking; Accessible with SFDC CR Testing Fields permission set</description>
        <inlineHelpText>For tracking of QA testing in full/staging sandbox</inlineHelpText>
        <label>Testing Results - Staging</label>
        <picklist>
            <picklistValues>
                <fullName>Unable to test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass - Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass - After fail or change</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testing_Results_UAT__c</fullName>
        <description>For UAT engagement results tracking; Accessible with SFDC CR Testing Fields permission set</description>
        <inlineHelpText>For tracking of UAT Engagement</inlineHelpText>
        <label>Testing Results - UAT</label>
        <picklist>
            <picklistValues>
                <fullName>Not Tested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass - Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Requirements Added</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Requirements Changed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Work Order missed requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail - Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_IS_CRM_Estimated_Hrs__c</fullName>
        <formula>Coding_Estimated_Hrs__c + Config_Estimated_Hrs__c + Design_Estimated__c + IS_QA_Estimated_Hrs__c + Data_Imports_Updates_Estimated_Hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total IS Estimated Hrs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_IS_CRM_Hrs__c</fullName>
        <label>Total IS Actual Hrs</label>
        <summarizedField>SFDC_Request_Comment__c.Time__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Request_Comment__c.Activity_Type__c</field>
            <operation>notEqual</operation>
            <value>Question</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Request_Comment__c.SFDC_Change_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UAT_Completed__c</fullName>
        <inlineHelpText>Date User Acceptance Testing has completed with all issues addressed</inlineHelpText>
        <label>UAT Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UAT_Results_Details__c</fullName>
        <description>For explanation of UAT engagement and results; accessible with SFDC CR Testing Fields permission set</description>
        <label>UAT Results Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Documentation_Actual_Hrs__c</fullName>
        <label>User Documentation: Actual Hrs</label>
        <summarizedField>SFDC_Request_Comment__c.Time__c</summarizedField>
        <summaryFilterItems>
            <field>SFDC_Request_Comment__c.Activity_Type__c</field>
            <operation>equals</operation>
            <value>User Documentation</value>
        </summaryFilterItems>
        <summaryForeignKey>SFDC_Request_Comment__c.SFDC_Change_Request__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Users_Affected__c</fullName>
        <description>Please note that the values for this picklist should be the same on both the Change Request and Case Object (eTech Support Record Type ONLY). If you are modifying one, please update the other.</description>
        <label>Users Affected</label>
        <picklist>
            <picklistValues>
                <fullName>Single Division</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Single Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Depts, &lt;50% of all users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Depts, &gt;50% of all users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Firmwide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20-100</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>100+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All SFDC Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Members</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Individual User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Required__c</fullName>
        <inlineHelpText>What type of work will be required in SFDC to complete this project?</inlineHelpText>
        <label>Work Required</label>
        <picklist>
            <picklistValues>
                <fullName>Coding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import/Updates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Troubleshooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Work_Resolution_Notes__c</fullName>
        <label>Work &amp; Resolution Notes</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Workaround__c</fullName>
        <inlineHelpText>Is there a workaround that can be communicated to the users?</inlineHelpText>
        <label>Workaround</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>of_Modifications__c</fullName>
        <inlineHelpText># of Modifications made to satisfy the requirements of this request</inlineHelpText>
        <label>Modifications</label>
        <summaryForeignKey>IS_System_Modification__c.Change_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Change Request</label>
    <listViews>
        <fullName>All_CRs</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Title__c</columns>
        <columns>Requested_By2__c</columns>
        <columns>IS_System__c</columns>
        <columns>IS_System_Application__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>12-Deployed</value>
        </filters>
        <label>All CRs</label>
    </listViews>
    <listViews>
        <fullName>All_CRs_w_Record_Type</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Title__c</columns>
        <columns>Requested_By2__c</columns>
        <columns>IS_System__c</columns>
        <columns>IS_System_Application__c</columns>
        <columns>Status__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATED_DATE</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All CRs w Record Type</label>
    </listViews>
</CustomObject>